--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
@@ -22,7 +24,6 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
-    "@vitejs/plugin-react": "^4.0.3",
     "esbuild": "0.19.5",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -38,8 +39,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
     "vitest": "^0.34.6"
   }
 }
