--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format:fix": "prettier . --write"
+    "format:fix": "prettier . --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.3",
@@ -36,11 +37,15 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.4.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^12.5.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vitest": "^0.34.6"
+  },
+  "lint-staged": {
+    "src/**/*.{js,html,scss,tsx}": "prettier --write",
+    "src/**/*.js": "eslint"
   }
 }
