feat: setup tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
@@ -24,7 +23,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "strictNullChecks": false
+    "strictNullChecks": false,
+
+    "jsx": "react-jsx",
+    "types": ["vitest/globals", "@testing-library/jest-dom", "jest"]
   },
   "include": ["vite.config.ts", ".eslintrc.cjs", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
