--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format:fix": "prettier . --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.3",
@@ -19,12 +21,17 @@
     "vite": "^4.4.5"
   },
   "devDependencies": {
+    "eslint-plugin-etc": "^2.0.3",
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.1.0",
+    "@types/jest": "^29.5.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "esbuild": "0.19.5",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -38,6 +45,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^12.5.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
