--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.6"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
@@ -50,8 +51,7 @@
     "lint-staged": "^12.5.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
-    "typescript": "^5.0.2",
-    "vitest": "^0.34.6"
+    "typescript": "^5.0.2"
   },
   "lint-staged": {
     "src/**/*.{js,html,scss,tsx}": "prettier --write",
